--- a/src/main.css
+++ b/src/main.css
@@ -3,26 +3,24 @@ html {
 }
 
 body {
-    margin: 0 3%;
+    margin: 3% auto;
     height: 100%;
+    width: 850px;
 }
 
-@media screen and (max-width: 850px) {
-    #start-btn {
-        width: 100%;
-    }
+p {
+    font-size: 20px;
+    text-align: justify;
 }
 
-@media screen and (min-width: 850px) {    
-    #start-btn {
-        width: 500px;
-    }
+#start-btn {
+    width: 100%;
 }
 
 #start-page {
     height: 100%;
     display: flex;  
     flex-direction: column;
-    justify-content: center;  
+    justify-content: top;  
     align-items: center;  
 }
