--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,5 @@
 html {
-    height: 100vh;
+    height: 80vh;
 }
 
 body {
@@ -73,11 +73,13 @@ body {
 #js-mark-text {
     font-weight: bold;
     font-size: 3em;
+    margin-bottom: 0;
 }
 
 #wasm-mark-text {
     font-weight: bold;
     font-size: 3em;
+    margin-bottom: 0;
 }
 
 @media screen and (max-width: 850px) {
@@ -151,11 +153,13 @@ body {
 
     #js-mark-text {
         font-weight: bold;
-        font-size: 3em;
+        font-size: 2.5em;
+        margin-bottom: 0;
     }
 
     #wasm-mark-text {
         font-weight: bold;
-        font-size: 3em;
+        font-size: 2.5em;
+        margin-bottom: 0;
     }
 }
