--- a/public/index.css
+++ b/public/index.css
@@ -11,6 +11,11 @@ body {
     width: 850px;
 }
 
+#info-page {
+    margin: 2% auto;
+    width: 850px;
+}
+
 #stats-btn {
     margin-top: 40px;
     width: 30%;
@@ -111,6 +116,11 @@ body {
         margin: 2% auto;
         width: 96%;
     }
+
+    #info-page {
+        margin: 2% auto;
+        width: 96%;
+    }
     
     .description {
         font-size: 20px;
@@ -201,4 +211,14 @@ body {
         margin-bottom: 5px;
         width: 100%;
     }
+}
+
+#home-img {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    opacity: 0.3;
+    top: 5px;
+    left: 5px;
+    display: none;
 }
